# cronjobs

fada/: fada_monitor.py  main.py  pyproject.toml  run.sh
