[project]
name = "fada-monitor"
version = "0.1.0"
description = "FADA Vehicle retail data report monitor"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "anthropic>=0.39.0",
    "pdfplumber>=0.11.0",
    "pypdf>=4.0.0",
    "dotenv>=0.9.9",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
